--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Mujtaba Almas | Python Backend Developer</title>
+    <meta
+      name="description"
+      content="Mujtaba Almas is a Python backend developer specializing in Django, FastAPI, and scalable platform architecture."
+    />
+    <meta
+      name="keywords"
+      content="Mujtaba Almas, Python developer, Django, FastAPI, backend engineer, API developer, platform engineer"
+    />
+    <meta name="author" content="Mujtaba Almas" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://mujtabaalmas.me/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mujtabaalmas.me/" />
+    <meta property="og:title" content="Mujtaba Almas | Python Backend Developer" />
+    <meta
+      property="og:description"
+      content="Python backend developer focused on Django & FastAPI platforms, APIs."
+    />
+    <meta property="og:image" content="https://mujtabaalmas.me/assets/mujtaba.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Mujtaba Almas | Python Backend Developer" />
+    <meta
+      name="twitter:description"
+      content="Python backend developer focused on Django & FastAPI platforms, APIs, and infrastructure leadership."
+    />
+    <meta name="twitter:image" content="https://mujtabaalmas.me/assets/mujtaba.jpg" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Mujtaba Almas",
+        "url": "https://mujtabaalmas.me/",
+        "image": "https://mujtabaalmas.me/assets/mujtaba.jpg",
+        "jobTitle": "Python Backend Developer",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Asia",
+          "addressCountry": "PK"
+        },
+        "alumniOf": "Some University in Pakistan",
+        "sameAs": [
+          "https://github.com/mujtabaalmas",
+          "https://www.linkedin.com/in/mujtabaalmas/",
+          "https://twitter.com/mujtaba_codes"
+        ],
+        "knowsAbout": [
+          "Python",
+          "Django",
+          "FastAPI",
+          "PostgreSQL",
+          "Distributed systems",
+          "Platform engineering"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
