--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-<<<<<<< HEAD
-    <link rel="icon" type="image/svg+xml" href="/assets/logo.svg" />
-=======
-    <link rel="icon" type="image/x-icon" href="/assets/faviconie.ico" />
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/faviconie.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/faviconie.ico" />
->>>>>>> 6b43c2f22a33a1d801c73db6cc331903a18001f0
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/logo.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/logo.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/logo.png" />
+    <link rel="shortcut icon" type="image/png" href="/assets/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mujtaba Almas | Python Backend Developer</title>
+  <title>Mujtaba Almas</title>
     <meta
       name="description"
       content="Mujtaba Almas is a Python backend developer specializing in Django, FastAPI, and scalable platform architecture."
