--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,6 +35,13 @@
       content="Python backend developer focused on Django & FastAPI platforms, APIs, and infrastructure leadership."
     />
     <meta name="twitter:image" content="https://mujtabaalmas.me/assets/mujtaba.jpg" />
+    <!-- Prism syntax highlighting assets -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-bash.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-yaml.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-dockerfile.min.js" defer></script>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
