add favicon to vs/0.8

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/assets/faviconie.ico" type="image/x-icon" sizes="any" />
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/logo.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="/assets/logo.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="/assets/logo.png" />
