vs/1.0 add term, privacy,cookie

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,40 +9,34 @@
     <link rel="shortcut icon" type="image/png" href="/assets/logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mujtaba Almas</title>
+  <title>Mujtaba Almas | Python Backend Developer | Django & FastAPI Expert</title>
     <meta
       name="description"
-      content="Mujtaba Almas is a Python backend developer specializing in Django, FastAPI, and scalable platform architecture."
+      content="Experienced Python backend developer specializing in Django, FastAPI, and scalable API architecture. Based in Pakistan. View my portfolio, projects, and hire me for your next backend project."
     />
     <meta
       name="keywords"
-      content="Mujtaba Almas, Python developer, Django, FastAPI, backend engineer, API developer, platform engineer"
+      content="Mujtaba Almas, Python developer, Django developer, FastAPI developer, backend engineer, API developer, Python backend developer Pakistan, hire Python developer, REST API development, backend portfolio"
     />
     <meta name="author" content="Mujtaba Almas" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://mujtabaalmas.me/" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mujtabaalmas.me/" />
-    <meta property="og:title" content="Mujtaba Almas | Python Backend Developer" />
+    <meta property="og:title" content="Mujtaba Almas | Python Backend Developer | Django & FastAPI Expert" />
     <meta
       property="og:description"
-      content="Python backend developer focused on Django & FastAPI platforms, APIs."
+      content="Experienced Python backend developer specializing in Django, FastAPI, and scalable API architecture. View my portfolio and projects."
     />
     <meta property="og:image" content="https://mujtabaalmas.me/assets/mujtaba.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mujtaba Almas | Python Backend Developer" />
+    <meta name="twitter:title" content="Mujtaba Almas | Python Backend Developer | Django & FastAPI Expert" />
     <meta
       name="twitter:description"
-      content="Python backend developer focused on Django & FastAPI platforms, APIs, and infrastructure leadership."
+      content="Experienced Python backend developer specializing in Django, FastAPI, and scalable API architecture. View my portfolio and projects."
     />
     <meta name="twitter:image" content="https://mujtabaalmas.me/assets/mujtaba.jpg" />
-    <!-- Prism syntax highlighting assets -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-bash.min.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-yaml.min.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-dockerfile.min.js" defer></script>
+   
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -51,24 +45,54 @@
         "url": "https://mujtabaalmas.me/",
         "image": "https://mujtabaalmas.me/assets/mujtaba.jpg",
         "jobTitle": "Python Backend Developer",
+        "description": "Experienced Python backend developer specializing in Django, FastAPI, and scalable API architecture based in Lahore, Pakistan.",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Lahore",
           "addressCountry": "PK"
         },
-        "alumniOf": "Virtual University Pakistan",
+        "alumniOf": {
+          "@type": "CollegeOrUniversity",
+          "name": "Virtual University Pakistan"
+        },
+        "worksFor": {
+          "@type": "Organization",
+          "name": "SSA Soft"
+        },
         "sameAs": [
           "https://github.com/mujtabaalmas",
-          "https://www.linkedin.com/in/mujtabaalmas/",
+          "https://www.linkedin.com/in/mujtabaalmas/"
         ],
         "knowsAbout": [
-          "Python",
-          "Django",
+          "Python Programming",
+          "Django Framework",
           "FastAPI",
           "PostgreSQL",
-          "Distributed systems",
-          "Platform engineering"
+          "REST API Development",
+          "Backend Development",
+          "Docker",
+          "Redis",
+          "Distributed Systems",
+          "Platform Engineering"
         ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Mujtaba Almas - Python Backend Developer Portfolio",
+        "url": "https://mujtabaalmas.me/",
+        "description": "Portfolio and blog of Mujtaba Almas, a Python backend developer specializing in Django, FastAPI, and scalable API architecture.",
+        "author": {
+          "@type": "Person",
+          "name": "Mujtaba Almas"
+        },
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://mujtabaalmas.me/blog?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
       }
     </script>
   </head>
